--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,22 +5,29 @@
         <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
             <div class="login-box card">
                 <div class="card-body">
-                    <form class="form-horizontal form-material" id="loginform" (submit)="login()">
+                    <form class="form-horizontal form-material" id="loginform" [formGroup]="loginForm" (submit)="login()">
                         <h3 class="box-title m-b-20">Sign In</h3>
                         <div class="form-group ">
                             <div class="col-xs-12">
-                                <input class="form-control" type="text" required="" placeholder="Username"> </div>
+                                <input class="form-control" type="email"  placeholder="Username / Email" formControlName="email"> </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input class="form-control" type="password" required="" placeholder="Password"> </div>
+                                <input class="form-control" type="password"  placeholder="Password" formControlName="password"> </div>
                         </div>
                         <div class="form-group row">
                             <div class="col-md-12">
                                 <div class="checkbox checkbox-info pull-left p-t-0">
-                                    <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
-                                    <label for="checkbox-signup"> Remember me </label>
+                                    <input id="checkbox-signup" type="checkbox" formControlName="remember" class="filled-in chk-col-light-blue">
+                                    <label for="checkbox-signup" > Remember me </label>
                                 </div> <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
+                        </div>
+                        <div class="row">
+                            <div class="col text-danger my-3">
+                                    <p *ngIf="validateEntity('email')">email required</p>
+                                    <p *ngIf="validateEntity('password')">password required</p>
+                                    <p *ngIf="validateEmail()">set a correct email</p>
+                            </div>
                         </div>
                         <div class="form-group text-center">
                             <div class="col-xs-12 p-b-20">
@@ -30,14 +37,13 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
                                 <div class="social">
-                                    <a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a>
-                                    <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a>
+                                    <div id="my-signin2"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group m-b-0">
                             <div class="col-sm-12 text-center">
-                                Don't have an account? <a href="pages-register.html" class="text-info m-l-5"><b>Sign Up</b></a>
+                                Don't have an account? <a [routerLink]="['/register']" routerLinkActive="router-link-active"  class="text-info m-l-5"><b>Sign Up</b></a>
                             </div>
                         </div>
                     </form>
