--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5883,3 +5883,7 @@ File: scss
     text-align: center;
     margin-top: 10px;
     overflow: hidden; } }
+
+  .cursor-pointer{
+    cursor: pointer;
+  }
